attempt to fix header alignment

--- a/src/components/header/_header.scss
+++ b/src/components/header/_header.scss
@@ -1,7 +1,6 @@
 .header {
     width: 100%;
     margin: 30px 0 20px;
-    height: 60px;
     &-content {
         display: flex;
         align-items: baseline;
